# mkpass

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
src/: main.rs
